<resources>
    <string name="app_name">FinancialManagement</string>
    <string name="label_app_name">FinancialManagement</string>
    <string name="label_login">Đăng nhập</string>
    <string name="label_register">Đăng ký</string>
    <string name="edit_text_username">Tên đăng nhập</string>
    <string name="edit_text_password">Mật khẩu</string>
    <string name="label_login_hint">Tên đăng nhập</string>
    <string name="button_login">ĐĂNG NHẬP</string>
    <string name="button_register">ĐĂNG KÝ</string>
    <string name="label_register_function">Đăng ký?</string>
    <string name="edit_text_email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>